# RobloxOffsetScanner

./: CMakeLists.txt  Readme.md
.github/workflows/: build.yml
docs/: REPORT.md
src/: dynamic_finder.cpp  dynamic_finder.h  dynamic_scanner.cpp  dynamic_scanner.hpp  main.cpp  memory_scanner.cpp  memory_scanner.h  pattern_db.hpp  scanner.cpp  scanner.hpp  utils.h  utils.hpp
